# IceWarfare

./: Cargo.toml  Makefile.toml  flake.nix
assets/brax/: brax_idle.glb  brax_walking.glb  readme.md  untitled.glb
assets/fish/: fish.glb
src/: init.rs  main.rs  plugins.rs
src/camera/: mod.rs  sys_camera_follow_target.rs  sys_spawn_camera.rs
src/character/: mod.rs  sys_animate_character.rs  sys_spawn_character.rs  sys_sync_model_animation.rs  sys_sync_model_position.rs  sys_sync_model_rotation.rs
src/character/skins/: mod.rs  skin_brax.rs  skin_fish.rs
src/controls/: mod.rs  sys_add_mouse_listener.rs  sys_handle_click_on_ground.rs
src/earth/: spawn.rs
src/health/: mod.rs  sys_spawn_healthbars.rs  sys_sync_health_position.rs  sys_update_health_width.rs
src/interactions/: mod.rs  sys_on_moving_hit_moving.rs  sys_on_wall_hit.rs
src/movement/: mod.rs  sys_move_towards_target.rs  sys_set_move_target.rs  sys_show_destination.rs  sys_stop_on_reaching_target.rs
src/physics/: mod.rs  sys_already_run.rs  sys_handle_moving_hit_moving.rs  sys_handle_wall_hit.rs
src/plugins/: bot.rs  camera.rs  controls.rs  cursor.rs  earth.rs  health.rs  init.rs  physics.rs  player.rs  target.rs
src/plugins/bot/: spawn_enemy.rs
src/plugins/camera/: cursor.rs  mouse.rs  spawn.rs  spawn_camera.rs  spawn_cursor.rs
src/plugins/cursor/: update_cursor_position.rs
src/plugins/earth/: spawn.rs  spawn_earth.rs
src/plugins/health/: sync_health_position.rs  update_health_width.rs
src/plugins/physics/: already_run.rs  collision.rs  crash_into_smth.rs  custom_collision_report.rs
(+11 files in other folders)
