[workspace]
resolver = "2"

[package]
name = "IceWarfare"
version = "0.1.0"
edition = "2021"

[dependencies]
leafwing-input-manager = "0.13.3"
bevy_xpbd_3d = { git = "https://github.com/Jondolf/bevy_xpbd", branch = "main", features = [
    "simd",
] }
itertools = "0.13.0"

[dependencies.bevy]
version = "0.13.2"
features = ["dynamic_linking", "wayland"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
